--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,23 +1,17 @@
 # Dockerfile for HAWU Rwanda 2.0 Server
 FROM node:18-alpine
 
-# Set working directory
 WORKDIR /app
 
-# Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --only=production
+# Install dependencies (no lockfile required)
+RUN npm install --omit=dev
 
-# Copy source code
 COPY . .
 
-# Build the application
 RUN npm run build
 
-# Expose port
 EXPOSE 5000
 
-# Start the application
 CMD ["npm", "start"]
