--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -26,6 +26,6 @@
       "@/utils/*": ["src/utils/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "vite-env.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
