--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -12,52 +12,52 @@
   "categories": ["business", "productivity", "social"],
   "icons": [
     {
-      "src": "/icons/icon-72x72.svg",
+      "src": "/images/logo.png",
       "sizes": "72x72",
-      "type": "image/svg+xml",
-      "purpose": "maskable any"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
-      "src": "/icons/icon-96x96.svg",
+      "src": "/images/logo.png",
       "sizes": "96x96",
-      "type": "image/svg+xml",
-      "purpose": "maskable any"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
-      "src": "/icons/icon-128x128.svg",
+      "src": "/images/logo.png",
       "sizes": "128x128",
-      "type": "image/svg+xml",
-      "purpose": "maskable any"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
-      "src": "/icons/icon-144x144.svg",
+      "src": "/images/logo.png",
       "sizes": "144x144",
-      "type": "image/svg+xml",
-      "purpose": "maskable any"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
-      "src": "/icons/icon-152x152.svg",
+      "src": "/images/logo.png",
       "sizes": "152x152",
-      "type": "image/svg+xml",
-      "purpose": "maskable any"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
-      "src": "/icons/icon-192x192.svg",
+      "src": "/images/logo.png",
       "sizes": "192x192",
-      "type": "image/svg+xml",
-      "purpose": "maskable any"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
-      "src": "/icons/icon-384x384.svg",
+      "src": "/images/logo.png",
       "sizes": "384x384",
-      "type": "image/svg+xml",
-      "purpose": "maskable any"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
-      "src": "/icons/icon-512x512.svg",
+      "src": "/images/logo.png",
       "sizes": "512x512",
-      "type": "image/svg+xml",
-      "purpose": "maskable any"
+      "type": "image/png",
+      "purpose": "any"
     }
   ],
   "screenshots": [
@@ -94,7 +94,7 @@
       "url": "/news",
       "icons": [
         {
-          "src": "/icons/icon-192x192.png",
+          "src": "/images/logo.png",
           "sizes": "192x192"
         }
       ]
