--- a/client/package.json
+++ b/client/package.json
@@ -14,16 +14,21 @@
     "lint:fix": "eslint src --ext ts,tsx --fix"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^2.0.1",
+    "@googlemaps/react-wrapper": "^1.2.0",
     "@react-google-maps/api": "^2.20.7",
     "@tanstack/react-query": "^5.8.4",
+    "@types/leaflet": "^1.9.21",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.545.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^6.20.1",
     "tailwind-merge": "^2.0.0",
     "zustand": "^4.4.7"
