--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
+    "@types/bcrypt": "^6.0.0",
     "axios": "^1.6.2",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.6",
