--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,14 @@
     "@react-google-maps/api": "^2.20.7",
     "@tanstack/react-query": "^5.8.4",
     "@types/leaflet": "^1.9.21",
+    "@types/qrcode": "^1.5.6",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.545.0",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
