--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,8 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.545.0",
     "qrcode": "^1.5.4",
@@ -33,6 +35,7 @@
     "react-hot-toast": "^2.4.1",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^6.20.1",
+    "recharts": "^3.4.1",
     "tailwind-merge": "^2.0.0",
     "zustand": "^4.4.7"
   },
