--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^6.20.1",
     "recharts": "^3.4.1",
     "tailwind-merge": "^2.0.0",
+    "uploadcare-widget": "^3.23.3",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
